--- a/header-snippet.html
+++ b/header-snippet.html
@@ -10,9 +10,16 @@
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="reviews.html">Testimonials</a></li>
     </ul>
-    <button id="languageToggle" class="language-btn">🌐 ENGLISH / ESPAÑOL</button>
+    <div class="nav-controls">
+      <button id="languageToggle" class="language-btn">🌐 ENGLISH / ESPAÑOL</button>
+      <div class="social-links">
+        <a href="https://www.facebook.com/profile.php?id=61573096373843" target="_blank" rel="noopener noreferrer">
+          <img src="https://raw.githubusercontent.com/gauravghongde/social-icons/master/PNG/White/Facebook_white.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/lamalquerida_kennewick/" target="_blank" rel="noopener noreferrer">
+          <img src="https://raw.githubusercontent.com/gauravghongde/social-icons/master/PNG/White/Instagram_white.png" alt="Instagram">
+        </a>
+      </div>
+    </div>
   </nav>
-  <div class="header-logo-bottom">
-    <img src="images/logo.png" alt="La Malquerida Logo" class="logo-bottom" />
-  </div>
 </header>
