Update layout and gallery across all pages

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,17 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="reviews.html">Testimonials</a></li>
       </ul>
-      <button id="languageToggle" class="language-btn">🌐 ENGLISH / ESPAÑOL</button>
+      <div class="nav-controls">
+        <button id="languageToggle" class="language-btn">🌐 ENGLISH / ESPAÑOL</button>
+        <div class="social-links">
+          <a href="https://www.facebook.com/profile.php?id=61573096373843" target="_blank" rel="noopener noreferrer">
+            <img src="https://raw.githubusercontent.com/gauravghongde/social-icons/master/PNG/White/Facebook_white.png" alt="Facebook">
+          </a>
+          <a href="https://www.instagram.com/lamalquerida_kennewick/" target="_blank" rel="noopener noreferrer">
+            <img src="https://raw.githubusercontent.com/gauravghongde/social-icons/master/PNG/White/Instagram_white.png" alt="Instagram">
+          </a>
+        </div>
+      </div>
     </nav>
   </header>
 
@@ -32,43 +42,105 @@
     <section class="gallery-grid">
       <h2 class="gallery-title" data-i18n-key="gallery">Gallery</h2>
       <div class="gallery-container">
-        <img src="images/photo1.png" alt="Gallery photo 1" />
-        <img src="images/photo2.png" alt="Gallery photo 2" />
-        <img src="images/photo3.png" alt="Gallery photo 3" />
-        <!-- 33 placeholders -->
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
-        <div class="gallery-placeholder"></div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814828/pexels-photo-2814828.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814831/pexels-photo-2814831.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814832/pexels-photo-2814832.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814833/pexels-photo-2814833.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814834/pexels-photo-2814834.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814835/pexels-photo-2814835.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814836/pexels-photo-2814836.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814837/pexels-photo-2814837.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814838/pexels-photo-2814838.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814839/pexels-photo-2814839.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814840/pexels-photo-2814840.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814841/pexels-photo-2814841.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814842/pexels-photo-2814842.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814843/pexels-photo-2814843.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814844/pexels-photo-2814844.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814845/pexels-photo-2814845.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814846/pexels-photo-2814846.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814847/pexels-photo-2814847.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814848/pexels-photo-2814848.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814849/pexels-photo-2814849.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814850/pexels-photo-2814850.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814851/pexels-photo-2814851.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814852/pexels-photo-2814852.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814853/pexels-photo-2814853.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814854/pexels-photo-2814854.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814855/pexels-photo-2814855.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814856/pexels-photo-2814856.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814857/pexels-photo-2814857.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814858/pexels-photo-2814858.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814859/pexels-photo-2814859.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814860/pexels-photo-2814860.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814861/pexels-photo-2814861.jpeg" alt="Gallery photo">
+        </div>
+        <div class="gallery-placeholder">
+          <img src="https://images.pexels.com/photos/2814862/pexels-photo-2814862.jpeg" alt="Gallery photo">
+        </div>
       </div>
     </section>
   </main>
