Update navigation and add social media links

--- a/about.html
+++ b/about.html
@@ -20,11 +20,20 @@
         <li><a href="menu.html">Menu</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="reservations.html">Reservations</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="reviews.html">Testimonials</a></li>
       </ul>
-      <button id="languageToggle" class="language-btn">🌐 ENGLISH / ESPAÑOL</button>
+      <div class="nav-controls">
+        <button id="languageToggle" class="language-btn">🌐 ENGLISH / ESPAÑOL</button>
+        <div class="social-links">
+          <a href="https://www.facebook.com/profile.php?id=61573096373843" target="_blank" rel="noopener noreferrer">
+            <img src="https://raw.githubusercontent.com/gauravghongde/social-icons/master/PNG/White/Facebook_white.png" alt="Facebook">
+          </a>
+          <a href="https://www.instagram.com/lamalquerida_kennewick/" target="_blank" rel="noopener noreferrer">
+            <img src="https://raw.githubusercontent.com/gauravghongde/social-icons/master/PNG/White/Instagram_white.png" alt="Instagram">
+          </a>
+        </div>
+      </div>
     </nav>
   </header>
   <main>
@@ -74,7 +83,6 @@ For each key team member you want to feature, include:</p>
       </p>
       <p>Photos of team members will make this section more engaging and personal.</p>
     </section>
-    <div style="height:1300px;"></div>
   </main>
   <footer>
     <p>107 Vista Way, Kennewick, WA 99336 | <a href="https://maps.apple.com/?q=107+Vista+Way,+Kennewick,+WA+99336" data-i18n-key="directions">Get Directions</a></p>
