Fix file paths for Netlify deployment

--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="La Malquerida Restaurant - Authentic seafood, drinks, and Mexican cuisine in Kennewick, WA." />
   <title>La Malquerida</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="home-update.css" />
-  <link rel="stylesheet" href="nav-horizontal.css" />
-  <link rel="icon" href="images/logo.png" type="image/png">
-  <link rel="stylesheet" href="header-logo.css" />
+  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/home-update.css" />
+  <link rel="stylesheet" href="/nav-horizontal.css" />
+  <link rel="icon" href="/images/logo.png" type="image/png">
+  <link rel="stylesheet" href="/header-logo.css" />
 </head>
 <body>
   <div class="logo-top">
-    <img src="images/la-malquerida-logo.png" alt="La Malquerida Seafood Bar and Grill" class="logo-center" />
+    <img src="/images/la-malquerida-logo.png" alt="La Malquerida Seafood Bar and Grill" class="logo-center" />
   </div>
   <header>
     <nav class="page-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="reservations.html">Reservations</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="reviews.html">Testimonials</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/menu">Menu</a></li>
+        <li><a href="/about">About Us</a></li>
+        <li><a href="/reservations">Reservations</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/reviews">Testimonials</a></li>
       </ul>
       <div class="nav-controls">
         <button id="languageToggle" class="language-btn">🌐 ENGLISH / ESPAÑOL</button>
@@ -57,6 +56,6 @@
     <p>Hours: Sun–Wed 10AM–12AM | Thu–Sat 10AM–2AM</p>
   </footer>
 
-  <script src="script.js" defer></script>
+  <script src="/script.js" defer></script>
 </body>
 </html>
